--- a/docker-compose/gophish-prod-app/assets/go-templates/index.html
+++ b/docker-compose/gophish-prod-app/assets/go-templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Scopio Labs - Login</title>
+	<title>Doamin Labs - Login</title>
 	<style type="text/css">body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -38,7 +38,7 @@
 <body data-gr-ext-installed="" data-new-gr-c-s-check-loaded="14.1121.0">
 <div class="container">
 <div class="login-form">
-<h2>Scopio Labs - Reset Password</h2>
+<h2>Domain Labs - Reset Password</h2>
 
 <form action="" method="POST"><input name="username" placeholder="Username" required="" type="text" /> <input name="password" placeholder="Password" required="" type="password" /> <input type="submit" value="Login" />&nbsp;</form>
 </div>
